refactor: extract duplicate patch apply method, use records, imports